mxfmux: Port to GstAggregator

--- a/gst/mxf/Makefile.am
+++ b/gst/mxf/Makefile.am
@@ -20,10 +20,13 @@ libgstmxf_la_SOURCES = \
 	mxfdms1.c
 
 libgstmxf_la_CFLAGS = \
+	-I$(top_srcdir)/gst-libs \
+	-I$(top_builddir)/gst-libs \
 	$(GST_PLUGINS_BASE_CFLAGS) \
 	$(GST_BASE_CFLAGS) \
 	$(GST_CFLAGS)
 libgstmxf_la_LIBADD = \
+	$(top_builddir)/gst-libs/gst/base/libgstbadbase-$(GST_API_VERSION).la \
 	$(GST_PLUGINS_BASE_LIBS) \
 	-lgstvideo-@GST_API_VERSION@ \
 	-lgstaudio-@GST_API_VERSION@ \
