opengl: build/provide glstereomix/split on gles only systems

--- a/ext/gl/Makefile.am
+++ b/ext/gl/Makefile.am
@@ -35,7 +35,10 @@ libgstopengl_la_SOURCES = \
 	gstglmixer.c \
 	gstglvideomixer.c \
 	gstglfiltershader.c \
-	gstglfilterapp.c
+	gstglfilterapp.c \
+	gstglviewconvert.c \
+	gstglstereosplit.c \
+	gstglstereomix.c
 
 noinst_HEADERS = \
 	gstglbasemixer.h \
@@ -54,16 +57,16 @@ noinst_HEADERS = \
 	gstglmixer.h \
 	gstglvideomixer.h \
 	gstglfiltershader.h \
-	gstglfilterapp.h
+	gstglfilterapp.h \
+	gstglstereosplit.h \
+	gstglstereomix.h \
+	gstglviewconvert.h
 
 # full opengl required
 if USE_OPENGL
 libgstopengl_la_SOURCES += \
 	gstglfilterglass.c \
 	gstgldeinterlace.c \
-	gstglviewconvert.c \
-	gstglstereosplit.c \
-	gstglstereomix.c \
 	gltestsrc.c \
 	gstgltestsrc.c \
 	gstglmosaic.c
@@ -71,9 +74,6 @@ libgstopengl_la_SOURCES += \
 noinst_HEADERS += \
 	gstglfilterglass.h \
 	gstgldeinterlace.h \
-	gstglstereosplit.h \
-	gstglstereomix.h \
-	gstglviewconvert.h \
 	gltestsrc.h \
 	gstgltestsrc.h \
 	gstglmosaic.h \
