hls: rename plugin from fragmented to hls

--- a/ext/hls/Makefile.am
+++ b/ext/hls/Makefile.am
@@ -1,25 +1,25 @@
 
-plugin_LTLIBRARIES = libgstfragmented.la
+plugin_LTLIBRARIES = libgsthls.la
 
-libgstfragmented_la_SOURCES =			\
+libgsthls_la_SOURCES =			\
 	m3u8.c					\
 	gsthlsdemux.c				\
-	gstfragmentedplugin.c 			\
+	gsthlsplugin.c 			\
 	gsthlssink.c 				\
 	gstm3u8playlist.c
 
-libgstfragmented_la_CFLAGS = $(GST_PLUGINS_BAD_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS) $(GST_CFLAGS) $(LIBGCRYPT_CFLAGS) $(NETTLE_CFLAGS)
-libgstfragmented_la_LIBADD = \
+libgsthls_la_CFLAGS = $(GST_PLUGINS_BAD_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS) $(GST_CFLAGS) $(LIBGCRYPT_CFLAGS) $(NETTLE_CFLAGS)
+libgsthls_la_LIBADD = \
 	$(top_builddir)/gst-libs/gst/uridownloader/libgsturidownloader-@GST_API_VERSION@.la \
         $(top_builddir)/gst-libs/gst/adaptivedemux/libgstadaptivedemux-@GST_API_VERSION@.la \
 	$(GST_PLUGINS_BASE_LIBS) -lgstpbutils-$(GST_API_VERSION) -lgstvideo-$(GST_API_VERSION) \
 	$(GST_BASE_LIBS) $(GST_LIBS) $(LIBM) $(LIBGCRYPT_LIBS) $(NETTLE_LIBS) $(OPENSSL_LIBS)
-libgstfragmented_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS) -no-undefined
-libgstfragmented_la_LIBTOOLFLAGS = $(GST_PLUGIN_LIBTOOLFLAGS)
+libgsthls_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS) -no-undefined
+libgsthls_la_LIBTOOLFLAGS = $(GST_PLUGIN_LIBTOOLFLAGS)
 
 # headers we need but don't want installed
 noinst_HEADERS = 			\
-	gstfragmented.h			\
+	gsthls.h			\
 	gsthlsdemux.h			\
 	gsthlssink.h			\
 	gstm3u8playlist.h		\
