oggdemux: Add GstAudioClippingMeta for Opus for accurate start/end clipping
https://bugzilla.gnome.org/show_bug.cgi?id=757153

--- a/ext/ogg/Makefile.am
+++ b/ext/ogg/Makefile.am
@@ -30,6 +30,7 @@ libgstogg_la_LIBADD = \
 	$(top_builddir)/gst-libs/gst/riff/libgstriff-$(GST_API_VERSION).la \
 	$(top_builddir)/gst-libs/gst/tag/libgsttag-$(GST_API_VERSION).la \
 	$(top_builddir)/gst-libs/gst/pbutils/libgstpbutils-$(GST_API_VERSION).la \
+	$(top_builddir)/gst-libs/gst/audio/libgstaudio-$(GST_API_VERSION).la \
 	$(GST_BASE_LIBS) \
 	$(GST_LIBS) \
 	$(OGG_LIBS)
