opus: Add proper support for multichannel audio
https://bugzilla.gnome.org/show_bug.cgi?id=757152

--- a/ext/opus/Makefile.am
+++ b/ext/opus/Makefile.am
@@ -10,6 +10,7 @@ libgstopus_la_CFLAGS = \
 libgstopus_la_LIBADD = \
 	$(GST_PLUGINS_BASE_LIBS) -lgstaudio-$(GST_API_VERSION) \
 	-lgsttag-$(GST_API_VERSION) -lgstrtp-$(GST_API_VERSION) \
+	-lgstpbutils-$(GST_API_VERSION) \
 	$(GST_BASE_LIBS) \
 	$(GST_LIBS) \
 	$(OPUS_LIBS)
