configure.ac: don't use an undefined variable
If the environment lacks of gstreamer development packages, this error will
be reported to the user: "gstreamer- was not found"

This is because we are using an undefined variable in the printed message. The
fix simple changes the variable for the hard-coded string "1.0".

Signed-off-by: Víctor Manuel Jáquez Leal <victorx.jaquez@intel.com>

https://bugzilla.gnome.org/show_bug.cgi?id=757283

--- a/configure.ac
+++ b/configure.ac
@@ -200,7 +200,7 @@ if $PKG_CONFIG --exists "gstreamer-1.0"; then
     GST_PKG_VERSION="1.0"
 fi
 if test -z "$GST_PKG_VERSION"; then
-    AC_MSG_ERROR([gstreamer-$GST_PKG_VERSION was not found])
+    AC_MSG_ERROR([gstreamer-1.0 was not found])
 fi
 AC_MSG_RESULT([$GST_API_VERSION])
 
