--- a/.arcconfig
+++ b/.arcconfig
@@ -1,5 +1,6 @@
 {
-    "phabricator.uri" : "https:\/\/phabricator.freedesktop.org\/api\/",
+    "phabricator.uri" : "https://phabricator.freedesktop.org/",
     "repository.callsign" : "GES",
-    "project": "GStreamer Editing Services"
+    "project": "GStreamer Editing Services",
+    "default-reviewers": "thiblahute,Mathieu_Du"
 }
