playback/player: Revert "android: Fix Windows build of the app"
This reverts commit 5d8c1868beec85ac02bcc6e0bfd0ad9dbb99a3b8.

The gradle based build system has various problems currently.

--- a/playback/player/android/app/build.gradle
+++ b/playback/player/android/app/build.gradle
@@ -1,5 +1,3 @@
-import org.apache.tools.ant.taskdefs.condition.Os
-
 apply plugin: 'com.android.application'
 
 android {
@@ -59,12 +57,7 @@ android {
             environment PATH: "${System.getenv("PATH")}${File.pathSeparator}${ndkExtraPath}"
         }
 
-        // Enable V=1 for debugging messages.
-        if (Os.isFamily(Os.FAMILY_WINDOWS)) {
-            commandLine "${ndkDir}/ndk-build.cmd", '-C', file('src/main/jni').absolutePath //, 'V=1'
-        } else {
-            commandLine "${ndkDir}/ndk-build", '-C', file('src/main/jni').absolutePath //, 'V=1'
-        }
+        commandLine "${ndkDir}/ndk-build", '-C', file('src/main/jni').absolutePath //, 'V=1' // Enable V=1 for debugging messages.
     }
 }
 
