playback/player: Revert "android: Use gradle & ndk-build combo to generate the Android App"
This reverts commit a95ee9c61c371ec2b8d4ff59cace26451b11225a.

The gradle based build system has various problems currently.

--- a/playback/player/android/Makefile.am
+++ b/playback/player/android/Makefile.am
@@ -1,24 +1,10 @@
 EXTRA_DIST = \
-    build.gradle \
-    gradlew \
-    gradlew.bat \
-    README.md \
-    settings.gradle \
-    app/build.gradle \
-	app/src/main/AndroidManifest.xml \
-	app/src/main/java/org/freedesktop/gstreamer/Player.java \
-	app/src/main/java/org/freedesktop/gstreamer/player/GStreamerSurfaceView.java \
-	app/src/main/java/org/freedesktop/gstreamer/player/Play.java \
-	app/src/main/java/org/freedesktop/gstreamer/player/VideoSelector.java \
-    app/src/main/jni/Android.mk \
-    app/src/main/jni/Application.mk \
-	app/src/main/jni/player.c \
-	app/src/main/res/layout/activity_player.xml \
-	app/src/main/res/layout/activity_video_selector.xml \
-	app/src/main/res/menu/menu_video_selector.xml \
-	app/src/main/res/values/dimens.xml \
-	app/src/main/res/values/strings.xml \
-	app/src/main/res/values/styles.xml \
-	app/src/main/res/values-w820dp/styles.xml \
-    gradle/wrapper/gradle-wrapper.jar \
-    gradle/wrapper/gradle-wrapper.properties
+	AndroidManifest.xml \
+	jni/Android.mk \
+	jni/player.c \
+	res/layout/main.xml \
+	res/values/strings.xml \
+	src/org/freedesktop/gstreamer/Player.java \
+	src/org/freedesktop/gstreamer/player/GStreamerSurfaceView.java \
+	src/org/freedesktop/gstreamer/player/Play.java
+
