audio-channel-mix: move channel mixer to audio libs
Move the channel mixer code to the audio library

--- a/gst-libs/gst/audio/Makefile.am
+++ b/gst-libs/gst/audio/Makefile.am
@@ -6,6 +6,7 @@ glib_enum_headers= 		\
 	audio.h			\
 	audio-format.h			\
 	audio-channels.h			\
+	audio-channel-mix.h			\
 	audio-info.h			\
 	audio-quantize.h			\
 	gstaudioringbuffer.h
@@ -27,6 +28,7 @@ libgstaudio_@GST_API_VERSION@_la_SOURCES = \
 	audio.c \
 	audio-format.c \
 	audio-channels.c \
+	audio-channel-mix.c \
 	audio-info.c \
 	audio-quantize.c \
 	gstaudioringbuffer.c \
@@ -51,6 +53,7 @@ libgstaudio_@GST_API_VERSION@include_HEADERS = \
 	audio.h \
 	audio-format.h \
 	audio-channels.h \
+	audio-channel-mix.h \
 	audio-info.h \
 	audio-quantize.h \
 	gstaudioringbuffer.h \
