--- a/gst-libs/gst/gl/Makefile.am
+++ b/gst-libs/gst/gl/Makefile.am
@@ -18,6 +18,7 @@ libgstgl_@GST_API_VERSION@_la_SOURCES = \
 	gstglfilter.c \
 	gstglbasefilter.c \
 	gstglshader.c \
+	gstglshaderstrings.c \
 	gstglsl.c \
 	gstglslstage.c \
 	gstglcolorconvert.c \
@@ -47,6 +48,7 @@ libgstgl_@GST_API_VERSION@include_HEADERS = \
 	gstglfilter.h \
 	gstglbasefilter.h \
 	gstglshader.h \
+	gstglshaderstrings.h \
 	gstglsl.h \
 	gstglslstage.h \
 	gstglcolorconvert.h \
