tests: fix linking waylandsink example with the gstwayland library
First, use top_builddir, otherwise it fails in out-of-source builds.
Second, link to the libtool archive directly to let make understand
the dependency.

--- a/tests/examples/waylandsink/Makefile.am
+++ b/tests/examples/waylandsink/Makefile.am
@@ -6,4 +6,4 @@ gtkwaylandsink_CFLAGS=-I$(top_srcdir)/gst-libs -I$(top_builddir)/gst-libs \
 	$(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS) $(GTK3_CFLAGS)
 gtkwaylandsink_LDADD=$(GTK3_LIBS) $(GST_PLUGINS_BASE_LIBS) $(GST_LIBS) \
 	-lgstvideo-$(GST_API_VERSION) \
-	-L$(top_srcdir)/gst-libs/gst/wayland -lgstwayland-$(GST_API_VERSION)
+	$(top_builddir)/gst-libs/gst/wayland/libgstwayland-$(GST_API_VERSION).la
