build: declare correctly parse lib built files
This is a continuation of commit fc8a0d12

When declaring BUILT_SOURCES, those files should not be distributed. This
patch avoids the distribution of the generated source code.

Signed-off-by: Víctor Manuel Jáquez Leal <victorx.jaquez@intel.com>

https://bugzilla.gnome.org/show_bug.cgi?id=755525

--- a/gst/vaapi/Makefile.am
+++ b/gst/vaapi/Makefile.am
@@ -187,20 +187,18 @@ libgstvaapi_1_4p_parse_gen_source_h = \
 libgstvaapi_parse_gen_sources = \
 	$(libgstvaapi_parse_gen_source_c) 	\
 	$(libgstvaapi_parse_gen_source_h) 	\
-	$(libgstvaapi_1_4p_parse_gen_source_c)	\
-	$(libgstvaapi_1_4p_parse_gen_source_h)	\
-	$(NUL)
-
-libgstvaapi_parse_source_c = gstvaapiparse.c $(libgstvaapi_parse_gen_source_c)
-libgstvaapi_parse_source_h = gstvaapiparse.h $(libgstvaapi_parse_gen_source_h)
+	$(NULL)
 
 if USE_GST_API_1_4p
-libgstvaapi_parse_source_c += $(libgstvaapi_1_4p_parse_gen_source_c)
-libgstvaapi_parse_source_h += $(libgstvaapi_1_4p_parse_gen_source_h)
+libgstvaapi_parse_gen_source_c += $(libgstvaapi_1_4p_parse_gen_source_c)
+libgstvaapi_parse_gen_source_h += $(libgstvaapi_1_4p_parse_gen_source_h)
 endif
 
-libgstvaapi_parse_la_SOURCES		= $(libgstvaapi_parse_source_c)
-noinst_HEADERS			       += $(libgstvaapi_parse_source_h)
+libgstvaapi_parse_la_SOURCES = gstvaapiparse.c gstvaapiparse.h
+nodist_libgstvaapi_parse_la_SOURCES =		\
+	$(libgstvaapi_parse_gen_source_c)	\
+	$(libgstvaapi_parse_gen_source_h)	\
+	$(NULL)
 
 libgstvaapi_parse_la_CFLAGS = \
 	-DGST_USE_UNSTABLE_API			\
@@ -266,10 +264,6 @@ EXTRA_DIST = \
 	$(libgstvaapi_egl_source_h)	\
 	$(libgstvaapi_1_2p_source_c)	 \
 	$(libgstvaapi_1_2p_source_h)	 \
-	$(libgstvaapi_parse_source_c)	 \
-	$(libgstvaapi_parse_source_h)	 \
-        $(libgstvaapi_1_4p_parse_gen_source_c) \
-        $(libgstvaapi_1_4p_parse_gen_source_h) \
 	$(NULL)
 
 -include $(top_srcdir)/git.mk
