build: add gsth265parse patches conditionally
As gsth265parse was added in GStreamer 1.4, and gstreamer-vaapi still support
GStreamer 1.2, the patching of gsth265parse must be conditional to the target
GStreamer version.

Signed-off-by: Víctor Manuel Jáquez Leal <victorx.jaquez@intel.com>

https://bugzilla.gnome.org/show_bug.cgi?id=755525

--- a/gst/vaapi/Makefile.am
+++ b/gst/vaapi/Makefile.am
@@ -230,6 +230,10 @@ videoparsers_patches_dir = \
 include $(videoparsers_patches_dir)/series.frag
 videoparsers_patches = \
 	$(videoparsers_patches_base:%=$(top_srcdir)/patches/videoparsers/%)
+if USE_GST_API_1_4p
+videoparsers_patches += \
+	$(videoparsers_patches_1_4p:%=$(top_srcdir)/patches/videoparsers/%)
+endif
 videoparsers_orig_sources = \
 	$(libgstvaapi_parse_gen_sources:%=$(videoparsers_sources_dir)/%)
 
