--- a/patches/videoparsers/Makefile.am
+++ b/patches/videoparsers/Makefile.am
@@ -1,5 +1,9 @@
 include series.frag
 
-EXTRA_DIST = series.frag $(videoparsers_patches_base)
+EXTRA_DIST = \
+	series.frag 			\
+	$(videoparsers_patches_base)	\
+	$(videoparsers_patches_1_4p)	\
+	$(NULL)
 
 -include $(top_srcdir)/git.mk
